Adds tag option

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -31,6 +31,7 @@ title: We're watching you. Sincerely, the Government.
     <form action="http://hq-nt.salsalabs.com/save" method="POST" class="salsa-form">
       <input type="hidden" name="object" value="supporter">
       <input type="hidden" name="organization_KEY" value="501" />
+      <input type="hidden" name="tag" value="Digital4thAmend" />
       <div class="field">
         <input type="text" name="Email" placeholder="E-mail"/>
       </div>
@@ -179,6 +180,7 @@ title: We're watching you. Sincerely, the Government.
         <form action="http://hq-nt.salsalabs.com/save" method="POST" class="salsa-form"> 
           <input type="hidden" name="object" value="supporter">
           <input type="hidden" name="organization_KEY" value="501" />
+          <input type="hidden" name="tag" value="Digital4thAmend" />
           <div class="field">
             <input type="text" name="Email" placeholder="E-mail"/>
           </div>
