--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -65,8 +65,8 @@ title: We're watching you. Sincerely, the Government.
 <div id="pc">
   <div class="inner">
     <div id="first-type">
-      <p class="mono type type-1">I am watching you. I know where you are and what you'll be doing next.</p>
-      <p class="mono type type-2">I can target you and make you look like a suspect if I wanted to.</p>
+      <p class="mono type type-1">Hi.  Your friendly government agent here. I’m looking at some juicy stuff you have stored online. Pretty embarrassing, actually. Stuff you thought you deleted. </p>
+      <p class="mono type type-2">Guess what?  An outdated law says I can see it without a warrant.</p>
       <p class="mono type type-3">Want to see what I can do? Use the buttons below to look into your own email.</p>
       <p class="mono type type-4"> </p>
       <p class="mono type type-5"> </p>
@@ -157,7 +157,7 @@ title: We're watching you. Sincerely, the Government.
     </div>
     <div class="clear"></div>
     
-    <p class="mono type type-6"></p>
+    <p class="mono type type-6">I might search your friends next. You should warn them.</p>
 
     <div class="social-buttons">
       <div>
@@ -174,8 +174,9 @@ title: We're watching you. Sincerely, the Government.
   <div class="sign-wrapper">
     <div id="sign">
       <div class="pad">
-        <h1>This is no joke,<br />and unconstitutional.</h1>
-        <h4>The US government has secretly built the largest surveillance system in history - they have our phone calls, location, and more. Tell us if you think this is wrong and want to help stop it.</h4>
+        <h1>This is no joke.</h1>
+        <h4>Recent revelations show the NSA collects data about millions of innocent Americans. But hundreds of other government agencies also claim they can collect your private information without a judge’s approval. Tell us if you think this is wrong and that you want better privacy protection.
+</h4>
 
         <form action="http://hq-nt.salsalabs.com/save" method="POST" class="salsa-form"> 
           <input type="hidden" name="object" value="supporter">
@@ -196,13 +197,18 @@ title: We're watching you. Sincerely, the Government.
 <div class="wrapper intro">
   <div class="container">
     <h2>Seriously, Government?</h2>
-    <p>By now, everyone knows. The U.S. Government has been spying on us. They've built a massive surveillance system that uses the technology we love against us.</p>
+    <p>This site illustrates how an outdated law from 1986, the Electronic Communications Privacy Act (ECPA), leaves too much room for government agencies to get all up in your business. Back in 1986, ECPA made sense. But now it's just crazy. Google, Microsoft, Facebook, and other companies are fighting back, but the government still wants this data without a warrant.
+</p>
+	<p>Some people might say, “Why do I care? I have nothing to hide.” But in the digital age, our online services hold many years’ worth of data – on all kinds of things.</p>
+	<p>Here’s the crazy part: The rules for the NSA are actually stricter than the rules for law enforcement and other government agencies.  The NSA has said over and over that it needs a warrant to get the email of US citizens.  But ECPA says law enforcement agencies don’t need a warrant.
+</p>
   </div>
 </div>
 
 <div class="wrapper less">
   <div class="container">
-    <h2 class="thin">In the 1700's peoples' homes were subject to random search and seizure, and in the 1950's the FBI and CIA tracked our correspondences by recording the information on the outside of envelopes and packages. People were outraged, and that's why we have protection of these things under laws like the 4th Amendment and ECPA.</h2>
+    <h2 class="thin">Our online privacy should be protected by the Constitution’s 4th Amendment, but the courts have been slow to catch up.  Government agencies live with strict rules for the stuff you're using less...
+</h2>
     
     <div class="use-examples">
       <ul>
@@ -214,7 +220,6 @@ title: We're watching you. Sincerely, the Government.
       
       <div class="info">
         <img src="/images/protected.jpg" />
-        <p>Protected! Except in extreme circumstances, gov't must get a warrant.</p>
       </div>
     </div>
   </div>
@@ -222,19 +227,18 @@ title: We're watching you. Sincerely, the Government.
 
 <div class="wrapper more">
   <div class="container">
-    <h2 class="thin">Unfortunately, through secret interpretations of laws and secret courts, the government has been collecting our online data in order to watch over and detect the movements of Internet users everywhere. They also don't think they need a warrant to access information of specific individuals, either.</h2>
+    <h2 class="thin">But, not the stuff you're using more…</h2>
     
     <div class="use-examples">
       <ul>
-        <li data-protected="false" data-text="The government has said that it can read private emails that have been opened or are more than 6 months old without a warrant. The NSA has been automatically collecting these."><i class="icon-inbox"> </i>E-mail</li>
-        <li data-protected="false" data-text="The IRS recently apologized for saying that Internet users have no privacy, and it changed its policy. But other agencies still want to look in or collect your online documents without a warrant." data-protected="true"><i class="icon-file-alt"> </i>Online Docs</li>
+        <li data-protected="false" data-text="The government wants to read private emails without a warrant."><i class="icon-inbox"> </i>E-mail</li>
+        <li data-protected="false" data-text="Documents stored online aren’t protected either." data-protected="true"><i class="icon-file-alt"> </i>Online Docs</li>
         <li data-protected="false" data-text="Text messaging didn't even exist when ECPA was passed."><i class="icon-meh"> </i>Text Messages</li>
         <li data-protected="false" data-text='Given that all kinds of personal and business data is now stored "in the cloud," Congress desperately needs to update ECPA to make it clear that the warrant requirement in the 4th Amendment applies equally to documents and other data stored in the cloud.'><i class="icon-cloud"> </i>Cloud Storage</li>
       </ul>
       
       <div class="info">
         <img src="/images/unprotected.jpg" />
-        <p>The gov't has frequently abused a loop-hole in ECPA to read private emails that have been opened or are more than 6 months old.</p>
       </div>
     </div>
   </div>
@@ -242,10 +246,11 @@ title: We're watching you. Sincerely, the Government.
 
 <div class="wrapper agencies">
   <div class="container">
-    <h2>It's not just the NSA that can spy on you. ANY of these government agencies can get your data thanks to outdated laws like ECPA.</h2>
+    <h2 class="thin">And here’s the really crazy part: It’s not only law enforcement agents that want to get your data without a warrant. Any of these regulatory and administrative agencies also want the power to pry into your private life without giving you a fair chance to defend yourself:</h2>
     <select class="styled-select">
       <option>Internal Revenue Service</option><option>National Security Agency</option><option>Appalachian Regional Commission</option><option>Chemical Safety and Hazard Investigation Board</option><option>Commodity Futures Trading Commission</option><option>Consumer Product Safety Commission</option><option>Corporation for National and Community Service</option><option>Defense Nuclear Facilities Safety Board</option><option>Department of Defense (In court martial proceedings)</option><option>Defense Contract Audit Agency</option><option>Department of Agriculture</option><option>USDA - Food and Nutrition Division</option><option>USDA - Office of General Counsel</option><option>USDA - OGC - Marketing Division</option><option>USDA - OGC - Pollution Control</option><option>USDA - OGC - Regulatory Division</option><option>USDA - Packer and Stockyards Administration</option><option>USDA - Office of Inspector General</option><option>Department of Commerce</option><option>USDOC - National Oceanic and Atmospheric Administration</option><option>USDOC - National Environmental Satellite Data</option><option>Department of Education</option><option>Department of Energy</option><option>DOE - Office of Inspector General</option><option>Department of Energy & Department of the Interior</option><option>Department of Health and Human Services</option><option>HHS - Office of the Inspector General</option><option>HHS - Center for Medicare & Medicaid Services</option><option>HHS - Departmental Appeals Board</option><option>HHS - Office of the General Counsel</option><option>HHS - Medicare Geographic Review Board</option><option>FDA</option><option>Department of Housing and Urban Development</option><option>USDHUD - Finance and Regulatory Enforcement</option><option>Department of the Interior</option><option>DOI - Division of Land and Water</option><option>DOI - Division of Parks and Wildlife</option><option>DOI - Bureau of Indian Affairs</option><option>DOI - Office of the Solicitor</option><option>DOI - Division of Mineral Resources</option><option>Department of Labor</option><option>Department of State Accountability Review Board</option><option>Department of Transportation</option><option>DOT - US Coast Guard G-LMI</option><option>DOT - Coast Guard</option><option>DOT - Federal Aviation Administration</option><option>DOT - National Highway Traffic Safety Admin</option><option>DOT - Research and Special Programs Administration</option><option>DOT - Federal Motor Carrier Safety Administration</option><option>Department of Veteran Affairs</option><option>The Environmental Protection Agency</option><option>EPA - Office of Regulatory Enforcement</option><option>EPA - Office of Site Remediation Enforcement</option><option>EPA - Office of General Counsel Pesticides and Toxic Substances Law Office</option><option>Farm Credit Administration</option><option>FCA - Offices of Inspector General </option><option>Federal Communications Commission</option><option>Federal Deposit Insurance Corporation</option><option>FDIC - Compliance and Enforcement Section</option><option>FDIC - Deputy Counsel to the Inspector General</option><option>FDIC - Resolution Trust Corporation</option><option>Federal Election Commission</option><option>Federal Emergency Management Agency</option><option>Federal Housing Finance Board</option><option>Federal Maritime Commission</option><option>Federal Mine Safety and Health Review Commission</option><option>Board of the Governors of the Federal Reserve System</option><option>Federal Reserve System - Office of the Inspector General</option><option>Federal Trade Commission</option><option>General Services Administration</option><option>GSA - Personal Property Division</option><option>GSA - Board of Contract Appeals</option><option>Foreign Claims Settlement Commission</option><option>Commission on Security and Cooperation in Europe</option><option>US International Trade Commission</option><option>USITC - Office of the Inspector General</option><option>North American Free Trade Agreement</option><option>National Commission on Electronic Fund Transfers</option><option>Legal Services Corporation</option><option>US Merit Systems Protection Board</option><option>National Aeronautics and Space Administration</option><option>National Credit Union Administration</option><option>National Foundation on the Arts and Humanities</option><option>NEA - Inspector General</option><option>National Labor Relations Board</option><option>Federal Labor Relations Authority</option><option>FLRA - Foreign Service Labor Relations Board</option><option>National Science Foundation</option><option>National Transportation Safety Board</option><option>Nuclear Regulatory Commission</option><option>NRC - Office of Management & Budget</option><option>Occupational Safety and Health Review Commission</option><option>Office of Personnel Management</option><option>Pension Benefit Guaranty Corporation</option><option>PBGC - Office of Inspector General</option><option>United States Postal Service</option><option>USPS - Office of Inspector General</option><option>Railroad Retirement Board</option><option>Securities and Exchange Commission</option><option>Small Business Administration</option><option>SBA - Small Business Investment Division</option><option>Tennessee Valley Authority</option><option>Civil Rights Commission</option><option>Corporation of Foreign Security Holders</option><option>Congressional - Executive Commission on The People's Republic of China</option><option>Equal Employment Opportunity Commission</option><option>Federal Trade Commission & Federal Energy Administration</option><option>Foreign Claims Settlement Commission of The United States</option><option>Inspectors General</option><option>National Indian Gaming Commission</option><option>President of the United States</option><option>Surface Transportation Board</option><option>Social Security Administration</option><option>United Nations Educational, Scientific, and Cultural Organization</option><option>Department of Justice</option><option>DOJ - Antitrust Division</option><option>DOJ - Child Exploitation & Obscenity Section, Criminal Division</option><option>DOJ - Commercial Litigation Branch, Civil Division</option><option>DOJ - Fraud Section, Criminal Division</option><option>DOJ - Fraud Section, Criminal Division ; Federal Bureau of Investigation</option><option>DOJ - Organized Crime and Racketeering Section</option><option>DOJ - Drug Enforcement Administration</option><option>DOJ - Federal Bureau of Investigation</option><option>DOJ - Immigration of Naturalization Service </option><option>DOJ - Exec. Office for Immigration Review, Office of the Chief Admin. Hearing Officer</option><option>DOJ - Office of the Inspector General</option><option>Department of the Treasury</option><option>Treasury - Bureau of Alcohol, Tobacco, and Firearms</option><option>Treasury - Office of the Comptroller of the Currency</option><option>Treasury - Customs</option><option>Treasury - Office of Foreign Asset Control</option><option>Treasury - Financial Crimes Enforcement Network</option><option>Treasury - Office of the Inspector General</option><option>Treasury - US Secret Service</option><option>Treasury - Office of Thrift Supervision</option><option>Treasury - Treasury Inspector General for Tax Administration</option>
     </select>
+    <h2 class="thin">Congress is finally on the cusp of reforming ECPA - but one proposal could derail ECPA reform by allowing regulatory agencies like the SEC and IRS to get emails without a warrant.</h2>
   </div>
 </div>
 
@@ -259,7 +264,7 @@ title: We're watching you. Sincerely, the Government.
     <img class="examples" src="/images/examples.png"/>
     
     <div id="social-cta">
-      <h2>Do you agree? Spread the word.</h2>
+      <h2>Do you agree this is crazy? Spread the word.</h2>
       <div class="social-buttons">
         <div>
           <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.stillwatchingyou.com" target="_blank" class="social facebook"></a>
